--- a/index.html
+++ b/index.html
@@ -15,49 +15,22 @@
         <a class="navbar-brand" href="#">To-Do List</a>
     </nav>
 
-
-
-    <form>
-        <div class="form-row">
-          <div class="form-group col-sm-6">
-            <label for="inputEmail4">Email</label>
-            <input type="email" class="form-control" id="inputEmail4">
+    <div class="containter">
+      <form>
+        <div class="row">
+          <div class="col">
+            <input type="text" class="form-control" id="season" placeholder="Ex. 2018" name="season">
           </div>
-          <div class="form-group col-sm-6">
-            <label for="inputPassword4">Password</label>
-            <input type="password" class="form-control" id="inputPassword4">
+          <div class="col">
+            <input type="text" class="form-control" id="round" placeholder="Ex. 3" name="round">
           </div>
+          <div class="col">
+            <button type="button" class="btn btn-primary btn-block" onclick="makeTable()">Submit</button>
         </div>
-    </form>
-
-    <form>
-        <div class="form-row align-items-center">
-          <div class="col-sm-3 my-1">
-            <label class="sr-only" for="inlineFormInputName">Name</label>
-            <input type="text" class="form-control" id="inlineFormInputName" placeholder="Jane Doe">
-          </div>
-          <div class="col-sm-3 my-1">
-            <label class="sr-only" for="inlineFormInputGroupUsername">Username</label>
-            <div class="input-group">
-              <div class="input-group-prepend">
-                <div class="input-group-text">@</div>
-              </div>
-              <input type="text" class="form-control" id="inlineFormInputGroupUsername" placeholder="Username">
-            </div>
-          </div>
-          <div class="col-auto my-1">
-            <div class="form-check">
-              <input class="form-check-input" type="checkbox" id="autoSizingCheck2">
-              <label class="form-check-label" for="autoSizingCheck2">
-                Remember me
-              </label>
-            </div>
-          </div>
-          <div class="col-auto my-1">
-            <button type="submit" class="btn btn-primary">Submit</button>
-          </div>
         </div>
       </form>
+    </div>
+
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.0-alpha2/js/bootstrap.min.js"></script>
