Adding more simple form styling and placeholder for task list -FR

--- a/index.html
+++ b/index.html
@@ -15,20 +15,20 @@
         <a class="navbar-brand" href="#">To-Do List</a>
     </nav>
 
-    <div class="containter">
+    <div class="container">
       <form>
         <div class="row">
           <div class="col">
-            <input type="text" class="form-control" id="season" placeholder="Ex. 2018" name="season">
-          </div>
-          <div class="col">
-            <input type="text" class="form-control" id="round" placeholder="Ex. 3" name="round">
+            <input type="text" class="form-control" id="season" placeholder="Task Name" name="season">
           </div>
           <div class="col">
             <button type="button" class="btn btn-primary btn-block" onclick="makeTable()">Submit</button>
         </div>
         </div>
       </form>
+      <div class="task-list">
+        <h1>task list will go here</h1>
+      </div>
     </div>
 
 
