more work on js -FR

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </nav>
 
     <div class="container">
-      <form>
+      <form id="task-form">
         <div class="row">
           <div class="col">
             <input type="text" class="form-control" id="task_text" placeholder="Task Name" name="task_text">
