Index and Script updated -FR

--- a/index.html
+++ b/index.html
@@ -42,12 +42,14 @@
 
         <h1 class="pt-3">Completed</h1>
         <ul class="list-group" id="completed-list">
-          <!-- <li class="list-group-item list-group-item-primary d-flex flex-row p-3">
-            <p>sdfasdf</p>
-          </li> -->
+          <li style="display: hidden;" class="list-group-item list-group-item-primary d-flex flex-row p-3" id='completed-template'>
+          </li>
         </ul>
       </div>
     </div>
+
+    <!-- templates -->
+
 
     <!-- TODO add completed list! -->
 
