--- a/index.html
+++ b/index.html
@@ -12,25 +12,7 @@
   </head>
 
 <body class = "bg-dark text-light">
-  <div class="modal" tabindex="-1" role="dialog">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title">Modal title</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body">
-          <p>Modal body text goes here.</p>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
-        </div>
-      </div>
-    </div>
-  </div>
+
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="#">
           
@@ -46,9 +28,16 @@
           </div>
           <div class="col">
             <button type="submit" class="btn btn-primary">Submit</button>
-        </div>
+          </div>
+          <!-- <div class="col">
+            <button type="button" class="btn btn-warning">Reset</button>
+          </div> -->
         </div>
       </form>
+
+      <button id="reset" type="button" class="btn btn-warning">Reset</button>
+
+
       <div class="lists">
         <h1 class="pt-3">Tasks</h1>
         <ul class="list-group" id="todo-list">
